Enhance ProdutosController and Categoria model with configuration and validation features; update launch settings for multiple environments; improve documentation and tasks; add custom validation attribute for capitalized first letters.

--- a/DemoApi/Properties/launchSettings.json
+++ b/DemoApi/Properties/launchSettings.json
@@ -18,6 +18,33 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "Development":{
+      "commandName": "Project",
+      "dotnetRunMessages": true,  
+      "launchBrowser": true,
+      "applicationUrl": "https://localhost:7237;http://localhost:5098",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "Staging":{
+      "commandName": "Project",
+      "dotnetRunMessages": true,  
+      "launchBrowser": true,
+      "applicationUrl": "https://localhost:7237;http://localhost:5098",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Staging"
+      }
+    },
+    "Production":{
+      "commandName": "Project",
+      "dotnetRunMessages": true,  
+      "launchBrowser": true,
+      "applicationUrl": "https://localhost:7237;http://localhost:5098",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
+      }
     }
   }
 }
